landing page agregada

--- a/Portafolio/portfolio.html
+++ b/Portafolio/portfolio.html
@@ -23,7 +23,7 @@
                        <div class="card-body">
                            <h2 class="card-title text-sm-left lh-base font-italic text-  text-decoration-none text-reset">Titulo</h2>
                            <p class="card-text">este es un texto</p>
-                           <a href="" class="card-link">Ver</a>
+                           <a href="../landing page/index.html" class="card-link">Ver</a>
                        </div>
                    </div>
                 </div>
