--- a/landing page/index.html
+++ b/landing page/index.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon"  href="img/logo.ico" />
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark navi">
