descripción en portafolio, agregado landing page

--- a/Portafolio/portfolio.html
+++ b/Portafolio/portfolio.html
@@ -21,8 +21,8 @@
                    <div class="card"> 
                     <img src="img/clover.svg" alt="clover">
                        <div class="card-body">
-                           <h2 class="card-title text-sm-left lh-base font-italic text-  text-decoration-none text-reset">Titulo</h2>
-                           <p class="card-text">este es un texto</p>
+                           <h2 class="card-title text-sm-left lh-base font-italic text-  text-decoration-none text-reset">M.O.O.N. Landing Page</h2>
+                           <p class="card-text">Landing page para el concierto del artista M.O.O.N</p>
                            <a href="../landing page/index.html" class="card-link">Ver</a>
                        </div>
                    </div>
