--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Redirigir al navegador a otra URL</title>
-<META HTTP-EQUIV="REFRESH" CONTENT="1;URL=/Portafolio/index.html">
+<META HTTP-EQUIV="REFRESH" CONTENT="1;URL=Portafolio/index.html">
 </head>
 <body>
 </body>
